<resources>
    <string name="app_name">BGLevel</string>
    <string name="text_label_bgLevel">Blood Glucose Level</string>
    <string name="text_label_pre">Pre</string>
    <string name="text_label_post">Post</string>
    <string name="text_label_dose">Dose</string>
    <string name="text_label_event">Event</string>
    <string name="text_label_notes">Food/Notes</string>
    <string name="text_label_datetime">Date</string>
    <string name="text_label_add">Add / Update</string>
    <string name="text_label_search">Search</string>
    <string name="text_label_edit">Edit</string>
    <string name="text_label_delete">Delete</string>
    <string name="text_label_reload">Reload</string>
    <string name="text_label_export">Export</string>
    <string name="text_label_recordInfo">Record Info</string>
    <string name="text_label_exportBackup">Backup</string>
    <string name="text_label_exportExtended">Export</string>
    <string name="text_label_import">Import</string>

    <!-- Records filter -->
    <string name="text_label_filter">Filter</string>
    <string name="text_label_byDate">By Date</string>
    <string name="text_label_byDateRange">By Date Range</string>
    <string name="text_label_all">All</string>

    <string name="text_placeholder_date">XXXX/XX/XX</string>
    <string name="text_placeholder_time">XX:XX</string>
    <string name="text_placeholder_float">XX.X</string>
    <string name="text_placeholder_string">XXXXXXXX</string>

    <string-array name="form_entries_event1">
        <item>Wake-up</item>
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Snack</item>
        <item>Dinner</item>
        <item>Supper</item>
        <item>Sleep</item>
    </string-array>

    <string-array name="form_entries_event2">
        <item>Pre</item>
        <item>Post</item>
    </string-array>

    <string name="tab_label_form">Form</string>
    <string name="tab_label_records">Records</string>
</resources>