<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/toolbar_action_filter"
        android:icon="@drawable/ic_baseline_filter_alt_24"
        android:title="@string/text_label_filter"
        app:tint="@color/white"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/toolbar_menu"
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:title="text"
        app:tint="@color/white"
        app:iconTint="@color/white"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/toolbar_menu_action_exportBackup"
                android:title="@string/text_label_exportBackup"
                app:showAsAction="never" />
            <item
                android:id="@+id/toolbar_menu_action_exportExtended"
                android:title="@string/text_label_exportExtended"
                app:showAsAction="never" />
            <item
                android:id="@+id/toolbar_menu_action_import"
                android:title="@string/text_label_import"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>