<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialogRecord_outer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:backgroundTint="@color/divider_dark"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/dialogRecord_cardView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="4dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dialogRecord_inner"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dialogRecord_label_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-medium"
                android:maxLines="1"
                android:text="@string/text_label_recordInfo"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/dialogRecord_divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:backgroundTint="@color/divider_dark"
                android:backgroundTintMode="src_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dialogRecord_label_title" />

            <TextView
                android:id="@+id/dialogRecord_label_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:text="@string/text_label_datetime"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dialogRecord_divider" />

            <TextView
                android:id="@+id/dialogRecord_view_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:text="@string/text_placeholder_date"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/dialogRecord_label_date"
                app:layout_constraintTop_toBottomOf="@+id/dialogRecord_divider" />

            <TextView
                android:id="@+id/dialogRecord_label_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:text="@string/text_label_event"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dialogRecord_label_date" />

            <TextView
                android:id="@+id/dialogRecord_view_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:text="@string/text_placeholder_string"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/dialogRecord_label_event"
                app:layout_constraintTop_toBottomOf="@+id/dialogRecord_view_date" />

            <TextView
                android:id="@+id/dialogRecord_label_bgLevelPre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:text="@string/text_label_pre"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dialogRecord_view_event" />

            <TextView
                android:id="@+id/dialogRecord_view_bgLevelPre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:maxLines="1"
                android:text="@string/text_placeholder_float"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/dialogRecord_label_bgLevelPre"
                app:layout_constraintTop_toTopOf="@+id/dialogRecord_label_bgLevelPre" />

            <TextView
                android:id="@+id/dialogRecord_label_bgLevelPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:maxLines="1"
                android:text="@string/text_label_post"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/dialogRecord_view_bgLevelPre"
                app:layout_constraintTop_toTopOf="@+id/dialogRecord_label_bgLevelPre" />

            <TextView
                android:id="@+id/dialogRecord_view_bgLevelPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:maxLines="1"
                android:text="@string/text_placeholder_float"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/dialogRecord_label_bgLevelPost"
                app:layout_constraintTop_toTopOf="@+id/dialogRecord_label_bgLevelPost" />

            <TextView
                android:id="@+id/dialogRecord_label_dose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:text="@string/text_label_dose"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dialogRecord_label_bgLevelPre" />

            <TextView
                android:id="@+id/dialogRecord_view_dose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:maxLines="1"
                android:text="@string/text_placeholder_float"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/dialogRecord_label_dose"
                app:layout_constraintTop_toTopOf="@+id/dialogRecord_label_dose" />

            <TextView
                android:id="@+id/dialogRecord_label_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:text="@string/text_label_notes"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dialogRecord_label_dose" />

            <TextView
                android:id="@+id/dialogRecord_view_notes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:gravity="left"
                android:maxLines="10"
                android:text="@string/text_placeholder_string"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dialogRecord_label_notes" />

            <View
                android:id="@+id/dialogRecord_divider2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="?android:attr/listDivider"
                android:backgroundTint="@color/divider_dark"
                app:layout_constraintBottom_toTopOf="@+id/dialogRecord_buttonLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dialogRecord_view_notes" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/dialogRecord_buttonLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dialogRecord_divider2">

                <Button
                    android:id="@+id/dialogRecord_button_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/text_label_edit"
                    android:textColor="@color/purple_700"
                    android:textSize="14sp"
                    app:cornerRadius="0dp"
                    app:icon="@drawable/ic_baseline_edit_24"
                    app:iconTint="@color/purple_700"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/dialogRecord_divider3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:rippleColor="@color/purple_700" />

                <Button
                    android:id="@+id/dialogRecord_button_delete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/text_label_delete"
                    android:textColor="@color/dark_red"
                    android:textSize="14sp"
                    app:cornerRadius="0dp"
                    app:icon="@drawable/ic_baseline_delete_forever_24"
                    app:iconTint="@color/dark_red"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/dialogRecord_divider3"
                    app:layout_constraintTop_toTopOf="parent"
                    app:rippleColor="@color/dark_red" />

                <View
                    android:id="@+id/dialogRecord_divider3"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:background="?android:attr/listDivider"
                    android:backgroundTint="@color/divider_dark"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/dialogRecord_button_delete"
                    app:layout_constraintStart_toEndOf="@+id/dialogRecord_button_edit"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>