<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout_cardOuter"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:onClick="showRecordInfoDialog">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp"
        card_view:cardMaxElevation="4dp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_cardInner"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/card_textView_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:text="@string/text_placeholder_date"
                android:textColor="@color/purple_700"
                android:textSize="16sp"
                card_view:autoSizeTextType="none"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/card_textLabel_bglevel_pre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="2dp"
                android:maxLines="1"
                android:text="@string/text_label_pre"
                android:textSize="16sp"
                card_view:autoSizeTextType="none"
                card_view:layout_constraintBottom_toTopOf="@+id/card_textLabel_bglevel_post"
                card_view:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/card_textView_bglevel_pre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="2dp"
                android:maxLines="1"
                android:text="@string/text_placeholder_float"
                android:textColor="@color/black"
                android:textSize="16sp"
                card_view:autoSizeTextType="none"
                card_view:layout_constraintBottom_toTopOf="@+id/card_textLabel_bglevel_post"
                card_view:layout_constraintStart_toEndOf="@+id/card_textLabel_bglevel_pre" />

            <TextView
                android:id="@+id/card_textLabel_bglevel_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:maxLines="1"
                android:text="@string/text_label_post"
                android:textSize="16sp"
                card_view:autoSizeTextType="none"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/card_textView_bglevel_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="8dp"
                android:maxLines="1"
                android:text="@string/text_placeholder_float"
                android:textColor="@color/black"
                android:textSize="16sp"
                card_view:autoSizeTextType="none"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toEndOf="@+id/card_textLabel_bglevel_post" />

            <TextView
                android:id="@+id/card_textView_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:text="@string/text_placeholder_string"
                android:textColor="@color/purple_200"
                android:textSize="16sp"
                card_view:autoSizeTextType="none"
                card_view:layout_constraintStart_toEndOf="@+id/card_textView_date"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/card_textLabel_dose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginBottom="2dp"
                android:maxLines="1"
                android:text="@string/text_label_dose"
                android:textSize="16sp"
                card_view:autoSizeTextType="none"
                card_view:layout_constraintBottom_toTopOf="@+id/card_textLabel_bglevel_post"
                card_view:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/card_textView_dose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="2dp"
                android:maxLines="1"
                android:text="@string/text_placeholder_float"
                android:textColor="@color/black"
                android:textSize="16sp"
                card_view:autoSizeTextType="none"
                card_view:layout_constraintBottom_toTopOf="@+id/card_textLabel_bglevel_post"
                card_view:layout_constraintStart_toEndOf="@+id/card_textLabel_dose" />

            <TextView
                android:id="@+id/card_textView_notes"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="200dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="bottom|right"
                android:maxLines="4"
                android:text="@string/text_placeholder_string"
                android:textColor="@color/black"
                android:textSize="14sp"
                card_view:autoSizeTextType="none"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>